# libpll-2

./: .gitignore  configure.ac
benchmark/: Makefile
benchmark/data/: HBG011004.raxml.bestTree  family_149.newick
benchmark/src/: benchmark.c  benchmark.cpp  constants.h  kernels.cpp  kernels.h  loader.cpp  loader.h
src/: CMakeLists.txt  Makefile.am  core_partials.cxx  core_partials_avx.cpp  core_partials_sse.cpp  core_partials_sse.cxx  hardware.cpp  pll.h
test/: Makefile  runtest.py
test/src/: asc-bias.c  derivatives-oddstates.c  derivatives.c  partial-traversal.c  protein-models.c  scaling.c
